# SnakeNN

./: 5720-362989568  Apple.h  Board.h  CMakeLists.txt  LICENSE  Makefile  README.md  Snake.h  SnakeNN  SnakeNN-app  Source.cpp  Thinking.h  app.rar
.github/workflows/: cmake-make.yml
Project/: rerr
code/: Apple.h  Board.h  Snake.h  Source.cpp  Thinking.h
models/: 0-1682  112-90000  1280-126468608  14798--2147483648  15-25088  17231--2147483648  27048--2147483648  293-97344  3-4050  3980-307520000  5720-362989568  8-13448  83-49928
scr/: Source.cpp
scr/libs/: Apple.h  Board.h  Snake.h  Thinking.h
src/: Source.cpp
src/libs/: Board.h
